--- a/index.html
+++ b/index.html
@@ -104,52 +104,32 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sapthesh V</p>
+				<p>Hey there...</p>
+<p>We may not have talked a lot</p>
+<p>but today felt like a moment worth pausing for</p>
+<p>because it's your birthday</p>
+
+<p>And birthdays…</p>
+<p>they’re like small milestones in this journey of life</p>
+<p>quiet reminders of how far we’ve come</p>
+
+<p>I don’t know your whole story...</p>
+<p>but from what little I’ve seen</p>
+<p>you seem like someone who carries kindness and quiet strength</p>
+
+<p>So I made this little gesture</p>
+<p>just to say — you matter</p>
+<p>and your day deserves to feel a little more special</p>
+
+<p>Wishing you peace, joy, and clarity in everything ahead</p>
+<p>and hope this birthday brings a calm happiness</p>
+<p>that stays a while</p>
+
+<p>Keep being you</p>
+<p>Keep moving forward</p>
+<p>And once again...</p>
+<p><strong>Happy Birthday :)</strong></p>
+
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
