Added images and birthday message for Ankita 🎂

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
+	<div class="balloons text-center" id="b4">
+    	<h2 style="color:#ad000e;"> <img class="fade-in" src="WhatsApp Image 2025-07-16 at 16.26.31 (2).jpeg" width="50" /></h2>
+    </div>
     <div class="balloons text-center" id="b1">
     	<h2 style="color:#F2B300;">A</h2>
     </div>
@@ -52,6 +55,9 @@
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">A</h2>
+    </div>
+	<div class="balloons text-center" id="b6">
+    	<h2 style="color:#6aabc9;">  <img class="fade-in" src="WhatsApp Image 2025-07-16 at 16.26.31.jpeg" width="100" /></h2>
     </div>
   
 
@@ -99,6 +105,7 @@
 				  <div class="bizcocho"></div>
 				</div>
 			</div>
+		
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
@@ -120,6 +127,7 @@
 				<p>thanks for everything</p>
 				<p>a very happy birthday Ankita</p>
 			</div>
+			
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
@@ -149,7 +157,9 @@
 
 
 	</div>
+		
 </body>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="effect.js"></script>
