Adjusted balloon size for better mobile view

--- a/index.html
+++ b/index.html
@@ -35,32 +35,26 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#ad000e;"> <img class="fade-in" src="WhatsApp Image 2025-07-16 at 16.26.31 (2).jpeg" width="50" /></h2>
-    </div>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">A</h2>
+    	<h2 style="color:#F2B300; font-size: 30px;">A</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">N</h2>
+    	<h2 style="color:#0719D4; font-size: 30px;">N</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">K</h2>
+    	<h2 style="color:#D14D39; font-size: 30px;">K</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">I</h2>
+    	<h2 style="color:#8FAD00; font-size: 30px;">I</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">T</h2>
+    	<h2 style="color:#8377E4; font-size: 30px;">T</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">A</h2>
+    	<h2 style="color:#99C96A; font-size: 30px;">A</h2>
     </div>
-	<div class="balloons text-center" id="b6">
-    	<h2 style="color:#6aabc9;">  <img class="fade-in" src="WhatsApp Image 2025-07-16 at 16.26.31.jpeg" width="100" /></h2>
-    </div>
-  
 
+  
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
 
