Adjusted balloon size for better mobile view

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
     	<h2 style="color:#99C96A; font-size: 30px;">A</h2>
     </div>
 
+	<style>
+  #b1, #b2, #b3, #b4, #b5, #b6 {
+    transform: scale(0.7); /* shrink balloons */
+  }
+
+  @media screen and (max-width: 100px) {
+    #b1, #b2, #b3, #b4, #b5, #b6 {
+      transform: scale(0.4); /* even smaller on mobile */
+    }
+  }
+</style>
+
+
+
+
   
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
