--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<p>a piece of happiness to you</p>
 				<p>I made all this...</p>
 				<p>as a birthday present to you</p>
-				<p>thanks for the friendship we made</p>
+				<p>thanks for the Relationship we made</p>
 				<p>thanks for everything</p>
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
@@ -149,7 +149,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sapthesh V</p>
+				<p>a very happy birthday aastha my loveee V</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
