--- a/index.html
+++ b/index.html
@@ -103,52 +103,52 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
+				<p>as beautiful as every other day with you</p>
+				<p>but today feels even more magical</p>
+				<p>because it’s the day my love was born</p>
+				<p>the day that gave me the most precious gift...</p>
+				<p><strong>YOU</strong></p>
 				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
+				<p>you are my reason to smile</p>
+				<p>you make my world brighter</p>
+				<p>and my heart warmer</p>
+				<p>that’s why</p>
+				<p>I want to make it...</p>
+				<p>the most romantic celebration ever</p>
 				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
+				<p>all my love with you</p>
+				<p>I made this...</p>
+				<p>as a birthday present for the girl I love</p>
+				<p>thank you for being mine</p>
+				<p>thank you for loving me</p>
+				<p>I wish you nothing but happiness</p>
+				<p>May your heart always stay at peace</p>
+				<p>May all your dreams come true</p>
 				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
+				<p>no matter what</p>
+				<p>I’ll always hold your hand...</p>
+				<p>and walk beside you forever</p>
+				<p>Now a new chapter begins...</p>
+				<p>the beautiful story of us</p>
+				<p>and it’s just getting started</p>
 				<p>indeed..</p>
 				<p>but...</p>
-				<p>don't worry</p>
+				<p>don’t worry</p>
 				<p>because...</p>
-				<p>God has your back</p>
+				<p>we have each other</p>
 				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
+				<p>this year will be filled</p>
+				<p>with love, laughter, and dreams</p>
+				<p>I just hope...</p>
+				<p>to make you feel loved every single day</p>
+				<p>so keep smiling, my love</p>
+				<p>enjoy your special day...</p>
+				<p>with all the love in the world</p>
+				<p>fill it with your brightest smile</p>
+				<p>and let’s make it unforgettable...</p>
 				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sapthesh V</p>
-			</div>
+				<p>I want to say once again</p>
+				<p>a very Happy Birthday, my darling ❤️</p>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
