Add photo gallery functionality: display photos after message and hide on cake reveal

--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
+			</div>
+			<!-- Birthday Photo Gallery -->
+			<div class="row" id="photo-gallery" style="display: none; margin-top: 30px; margin-bottom: 30px;">
+				<div class="col-md-6 col-xs-12 text-center">
+					<img src="photo1.jpg" alt="Birthday Photo 1" class="img-responsive" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); margin-bottom: 20px;">
+				</div>
+				<div class="col-md-6 col-xs-12 text-center">
+					<img src="photo2.jpg" alt="Birthday Photo 2" class="img-responsive" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); margin-bottom: 20px;">
+				</div>
 				<p>Today is...</p>
 				<p>as beautiful as every other day with you</p>
 				<p>but today feels even more magical</p>
