Enhance index.html: added a heartfelt birthday message with poetic elements to celebrate love, creating a more personal and emotional experience for the recipient.

--- a/index.html
+++ b/index.html
@@ -116,12 +116,55 @@
 					<div class="col-md-6 col-xs-12 text-center">
 						<img src="photo2.jpg" class="img-responsive" style="max-width:100%; border-radius:10px; box-shadow:0 4px 8px rgba(0,0,0,0.2); margin-bottom:20px;">
 					</div>
+					
+					<!-- Full love story -->
 					<p>Today is...</p>
 					<p>as beautiful as every other day with you</p>
 					<p>but today feels even more magical</p>
 					<p>because it’s the day my love was born</p>
+					<p>the day that gave me the most precious gift...</p>
 					<p><strong>YOU</strong></p>
-					<p>... (rest of your love story text here) ...</p>
+					<p>Do you know..?</p>
+					<p>you are my reason to smile</p>
+					<p>you make my world brighter</p>
+					<p>and my heart warmer</p>
+					<p>that’s why</p>
+					<p>I want to make it...</p>
+					<p>the most romantic celebration ever</p>
+					<p>and let me share...</p>
+					<p>all my love with you</p>
+					<p>I made this...</p>
+					<p>as a birthday present for the girl I love</p>
+					<p>thank you for being mine</p>
+					<p>thank you for loving me</p>
+					<p>I wish you nothing but happiness</p>
+					<p>May your heart always stay at peace</p>
+					<p>May all your dreams come true</p>
+					<p>Remember</p>
+					<p>no matter what</p>
+					<p>I’ll always hold your hand...</p>
+					<p>and walk beside you forever</p>
+					<p>Now a new chapter begins...</p>
+					<p>the beautiful story of us</p>
+					<p>and it’s just getting started</p>
+					<p>indeed..</p>
+					<p>but...</p>
+					<p>don’t worry</p>
+					<p>because...</p>
+					<p>we have each other</p>
+					<p>and</p>
+					<p>this year will be filled</p>
+					<p>with love, laughter, and dreams</p>
+					<p>I just hope...</p>
+					<p>to make you feel loved every single day</p>
+					<p>so keep smiling, my love</p>
+					<p>enjoy your special day...</p>
+					<p>with all the love in the world</p>
+					<p>fill it with your brightest smile</p>
+					<p>and let’s make it unforgettable...</p>
+					<p>lastly...</p>
+					<p>I want to say once again</p>
+					<p>a very Happy Birthday, my darling ❤️</p>
 				</div>
 			</div>
 
